--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,4 +4,15 @@
 
 body {
   background-color: rgb(15 23 42);
+  color: rgb(143, 250, 0);
+  /*background-image: url("../public/hyperbolic-trailer.png");
+  background-repeat: no-repeat;
+  background-position: center top;*/
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
